--- a/app/src/main/res/values/quotes.xml
+++ b/app/src/main/res/values/quotes.xml
@@ -90,6 +90,133 @@
         <item>"In the country of the story the writer is king." ― Shirley Jackson</item>
         <item>"I edit my own stories to death. They eventually run and hide from me." ― Jeanne Voelker</item>
         <item>"That isn't writing at all, it's typing." ― Truman Capote</item>
+        <item>"I'm either going to be a writer or a bum." ― Carl Sandburg</item>
+        <item>"It takes writing a billion bad words before you get to the good ones." ― Ray Bradbury</item>
+        <item>"That’s the magic of revisions – every cut is necessary, and every cut hurts, but something new always grows." ― Kelly Barnhill</item>
+        <item>"As much as I like it when a book I'm writing speeds along, the downside can be that an author becomes too eager to finish and rushes the end. The end is even more important than the first page, and rushing can damage it." ― David Morrell</item>
+        <item>"A writer doesn't dream of riches and fame, though those things are nice. A true writer longs to leave behind a piece of themselves, something that withstands the test of time and is passed down for generations." ― C.K. Webb</item>
+        <item>"I got this story from someone who had no business in the telling of it." ― Edgar Rice Burroughs</item>
+        <item>"As many authors have said, if the writer is not surprised by events, then chances are that the reader will not be either, and grow bored." ― Paul Di Filippo</item>
+        <item>"I go silent so I can write. When my tongue is wagging my fingers are silent." ― Sonia Rumzi</item>
+        <item>"Biting my truant pen, beating myself for spite: "Fool!" said my muse to me, "look in thy heart, and write." ― Philip Sidney</item>
+        <item>"Make no mistake, those who write long books have nothing to say. Of course those who write short books have even less to say." ― Mark Z. Danielewski</item>
+        <item>"“I never waited for my Irish Cream coffee to be the right temperature, with a storm happening outside and my fireplace crackling$#8230; I wrote every day, at home, in the office, whether I felt like it or not, I just did it." ― Stephen J. Cannell</item>
+        <item>"Hold your pen and spare your voice." ― Dorothy Parker</item>
+        <item>"We do not wait for inspiration. We work because we've jolly well got to. But when all is said and done, we toil at this particular job because it's turned out to be our particular job, and in a weird sort of way I suppose we may be said to like it." ― Ngaio Marsh</item>
+        <item>"The purpose of a writer is to keep civilisation from destroying itself." ― Bernard Malamud</item>
+        <item>"If you hear voices, you're a lunatic. If you write down what they say, you're an author." ― Dani Harper</item>
+        <item>"An idea, like a ghost, must be spoken to a little before it will explain itself." ― Charles Dickens</item>
+        <item>"Goals are dreams with a deadline." ― Napoleon Hill</item>
+        <item>"There were no absolutes in fiction, no certain way to deliver what was needed. So it was no surprise most technical writers considered novel-writing a gateway to madness." ― S.A. Reid</item>
+        <item>"The best ideas will eat at you for days, maybe even weeks, until something, some incident, some impulse, triggers you to finally express them." ― Criss Jami</item>
+        <item>"Sometimes I write about the forest, sometimes I write about the trees, and occasionally I’ll write about the lumberjack. Actually, the lumberjack is more the editing part, figuring what needs to be cut." ― Jarod Kintz</item>
+        <item>"Hard writing makes easy reading." ― Wallace Stegner</item>
+        <item>"If you want to write fiction, the best thing you can do is take two aspirins, lie down in a dark room, and wait for the feeling to pass." ― Lawrence Block</item>
+        <item>"Sometimes writing everyday is like pulling teeth, painful, but necessary." ― Wendy Swore</item>
+        <item>"The only impeccable writers are those who never wrote." ― William Hazlitt</item>
+        <item>"Ours is a culture and a time immensely rich in trash as it is in treasures." ― Ray Bradbury</item>
+        <item>"A prose that is altogether alive demands something of the reader that the ordinary novel reader is not prepared to give." ― T.S. Eliot</item>
+        <item>"Humility is not a virtue in a writer, it is an absolute necessity." ― James Lee Burke</item>
+        <item>"It's a very excruciating life facing that blank piece of paper every day and having to reach up somewhere into the clouds and bring something down out of them." ― Truman Capote</item>
+        <item>"I write to reach eternity" ― James Jones</item>
+        <item>"If you wish to be a writer, write." ― Epictetus</item>
+        <item>"It's the writing that teaches you." ― Isaac Asimov</item>
+        <item>"Paper is more patient than man." ― Anne Frank</item>
+        <item>"To begin impatiently is the worst mistake a writer can make." ― Antony Beevor</item>
+        <item>"But what is more to the point is my belief that the habit of writing thus for my own eye only is good practice. It loosens the ligaments. Never mind the misses and the stumbles." ― Virginia Woolf</item>
+        <item>"Reading feeds the soul, writing nourishes it!" ― Joanne McClean</item>
+        <item>"You know you're writing well when you're throwing good stuff into the wastebasket." ― Ernest Hemingway</item>
+        <item>"I don't write stories, I write characters." ― Bhavya Kaushik</item>
+        <item>"I'm ambidextrous. I can write just as poorly with either hand." ― Jarod Kintz</item>
+        <item>"Come, let's be calm: no one incapable of restraint was ever a writer." ― Gustave Flaubert</item>
+        <item>"I have a pesky little critic in the back of my mind. He's a permanent fixture and passes judgment on everything I write. In order to placate him, especially when I'm endeavoring to write anything as ambitious as a novel, I have to constantly mutter, 'I'm not writing a masterpiece, I'm not writing a masterpiece.' ― Rukhsana Khan</item>
+        <item>"Writing is the only art form where a good number of the artists make a slice of their living criticizing one another in print, in public." ― Christian Bauman</item>
+        <item>"A novelist is a person who lives in other people's skins." ― E.L. Doctorow</item>
+        <item>"Freedom of the press is limited to those who own one." ― A.J. Liebling</item>
+        <item>"The reason why so few good books are written is that so few people who can write know anything." ― Walter Bagehot</item>
+        <item>"Learn the rules before you break them." ― Steven Taylor Goldsberry</item>
+        <item>"Writers write. Everyone else makes excuses." ― Jack M. Bickham</item>
+        <item>"Writing is supposed to be difficult, agonizing, a dreadful exercise, a terrible occupation." ― Ray Bradbury</item>
+        <item>"I believe the first draft of a book — even a long one — should take no more than three months&#8230; Any longer and — for me, at least — the story begins to take on an odd foreign feel, like a dispatch from the Romanian Department of Public Affairs, or something broadcast on high-band shortwave duiring a period of severe sunspot activity." ― Stephen King</item>
+        <item>"Nobody reads a book to get to the middle." ― Mickey Spillane</item>
+        <item>"My whole theory of writing I can sum up in one sentence. An author ought to write for the youth of his own generation, the critics of the next, and the schoolmasters of ever afterward." ― F. Scott Fitzgerald</item>
+        <item>"I believe one would write better if the climate were bad. If there were a lot of wind and storms for example&#8230;" ― Aldous Huxley</item>
+        <item>"Never use abstract nouns when concrete ones will do. If you mean 'More people died' don’t say 'Mortality rose.'" ― C.S. Lewis</item>
+        <item>"I write only when inspiration strikes. Fortunately, it strikes every morning at nine o'clock sharp." ― W. Somerset Maugham</item>
+        <item>"I found I was repeating myself. It is the beginning of the end when you discover you have style." ― Dashiell Hammett</item>
+        <item>"I just rearrange words into a pleasing order for money." ― Terry Pratchett</item>
+        <item>"Writer's block, I just drove around it four times. All my favorite writers live there." ― Jarod Kintz</item>
+        <item>"The world requires me to re-write its wretched dialogue!" ― Richard Greenberg</item>
+        <item>"Writers are always anxious, always on the run - from the telephone, from responsibilities, from the distractions of the world." ― Edna O'Brien</item>
+        <item>"As for my next book, I won't write it till it has grown heavy in my mind like a ripe pear; pendant, gravid, asking to be cut or it will fall." ― Virginia Woolf</item>
+        <item>"Writing is the supreme solace." ― W. Somerset Maugham</item>
+        <item>"My circumstances of unrelieved responsibility and permanent distraction necessitated the short story form." ― Raymond Carver</item>
+        <item>"Assuming you can write clear English sentences, give up all worry about communication. If you want to communicate, use the telephone." ― Richard Hugo</item>
+        <item>"You want to tell a story? Grow a heart. Grow two. Now, with the second heart, smash the first one into bits." ― Charles Yu</item>
+        <item>"The best writing is rewriting." ― E.B. White</item>
+        <item>I suggested to her that she start writing. "I can't write at all," she said. "Neither can many bestsellers," I replied. "But that pesky detail didn't stop them." ― Jarod Kintz</item>
+        <item>"If I didn't know the ending of a story, I wouldn't begin. I always write my last lines, my last paragraph first, and then I go back and work towards it. I know where I'm going. I know what my goal is. And how I get there is God's grace." ― Katherine Anne Porter</item>
+        <item>"Arrogance kills creativity." ― A.M. Riley</item>
+        <item>"You've got to be smart enough to write and stupid enough not to think about all the things that might go wrong." ― Sarah Gilbert</item>
+        <item>"To be a writer is to embrace rejection as a way of life." ― Dana Stabenow</item>
+        <item>"All writers have this vague hope that the elves will come in the night and finish any stories." ― Neil Gaiman</item>
+        <item>"If a book is well written, I always find it too short." ― Jane Austen</item>
+        <item>"We have this idea that we need to be in the mood to write. We don't." ― Julia Cameron</item>
+        <item>"The greatest part of a writer's time is spent in reading, in order to write: a man will turn over half a library to make one book." ― Samuel Johnson</item>
+        <item>"Writing saved me from the sin and inconvenience of violence." ― Alice Walker</item>
+        <item>"One day, I shall explode like an artillery shell and all my bits will be found on the writing table." ― Gustave Flaubert</item>
+        <item>"It begins with a character, usually, and once he stands up on his feet and begins to move, all I can do is trot along behind him with a paper and pencil trying to keep up long enough to put down what he says and does." ― William Faulkner</item>
+        <item>"I write and that way rid myself of me and then at last I can rest." ― Clarice Lispector</item>
+        <item>"Writing is a solitary business. It takes over your life. In some sense, a writer has no life of his own. Even when he's there, he’s not really there." ― Paul Auster</item>
+        <item>"I don't write fantasy; I write historical novels about an imaginary place." ― Raymond E. Feist</item>
+        <item>"Only half the story is true. The rest is necessary." ― John Yau</item>
+        <item>"When my horse is running good, I don't stop to give him sugar." ― William Faulkner</item>
+        <item>"Writing doesn’t get easier with experience. The more you know, the harder it is to write." ― Tim O'Brien</item>
+        <item>"The writer's life: Hard days, lots of work, no money, too much silence. Nobody's fault. You chose it." ― Bill Barich</item>
+        <item>"He felt as he always did when he finished a book — queerly empty, let down, aware that for each little success he had paid a toll of absurdity." ― Stephen King, Misery</item>
+        <item>"In writing a novel, when in doubt, have two guys come through the door with guns." ― Raymond Chandler</item>
+        <item>"If a person is not talented enough to be a novelist, not smart enough to be a lawyer, and his hands are too shaky to perform operations, he becomes a journalist." ― Norman Mailer</item>
+        <item>"Writing is the emotional morphine." ― Mariam Maarouf</item>
+        <item>"It's doubtful that anyone with an internet connection at his workplace is writing good fiction." ― Jonathan Franzen</item>
+        <item>"I wisely started with a map." ― J.R.R. Tolkien</item>
+        <item>"Loafing is the most productive part of a writer's life." ― James Norman Hall</item>
+        <item>"Most writers might as well write in invisible ink, because if what they're writing is forgettable, it might as well be invisible too." ― Jarod Kintz</item>
+        <item>"Words have weight." ― Stephen King</item>
+        <item>"Of all human activities, writing is the one for which it is easiest to find excuses not to begin – the desk's too big, the desk's too small, there's too much noise, there's too much quiet, it's too hot, too cold, too early, too late&#8230; ― Robert Harris</item>
+        <item>If I ever saw my muse she would be an old woman with a tight bun and spectacles poking me in the middle of the back and growling, "Wake up and write the book!" ― Kerry Greenwood</item>
+        <item>"As an experienced editor, I disapprove of flashbacks, foreshadowings, and tricksy devices; they belong in the 1980s with M.A.s in postmodernism and chaos theory." ― David Mitchell</item>
+        <item>"A cliche is everything you've ever heard of." ― Janet Fitch</item>
+        <item>"People who understand everything get no stories." ― Bertolt Brecht</item>
+        <item>"The pen is mightier than the sword unless it's a real sword in which case the guy with the pen should run away fast." ― Roger Eschbacher</item>
+        <item>Write. Write more. Write even more. Write even more than that. Write when you don't want to. Write when you do. Write when you have something to say. Write when you don't. Write every day. Keep writing." ― Brian Clark</item>
+        <item>"Reading maketh a full man; conference a ready man; and writing an exact man." ― Francis Bacon</item>
+        <item>"The story I am writing exists, written in absolutely perfect fashion, some place, in the air. All I must do is find it, and copy it." ― Jules Renard</item>
+        <item>"Writing in English is like throwing mud at a wall." ― Joseph Conrad</item>
+        <item>"All the stories I would like to write persecute me. When I am in my chamber, it seems as if they are all around me, like little devils, and while one tugs at my ear, another tweaks my nose, and each says to me, 'Sir, write me, I am beautiful.'" ― Umberto Eco</item>
+        <item>"When writing goes painfully, when it's hideously difficult, and one feels real despair (ah, the despair, silly as it is, is real!)–then naturally one ought to continue with the work; it would be cowardly to retreat. But when writing goes smoothly – why then one certainly should keep on working, since it would be stupid to stop. Consequently one is always writing or should be writing." ― Joyce Carol Oates</item>
+        <item>"You can't put much on paper before you betray your secret self, try as you will to keep things civil." ― Patricia Hampl</item>
+        <item>"If the storytellers told it true, all stories would end in death." ― George Pelecanos</item>
+        <item>"Never put off writing until you are better at it." ― Gary Henderson</item>
+        <item>"Writing feels safer somehow. I can catch myself before I say the wrong thing." ― Hillary Frank</item>
+        <item>"In the glad old days, before the rise of modern morbidities&#8230; it used to be thought a disadvantage to be misunderstood." ― G.K. Chesterton</item>
+        <item>"Talent is extremely common. What is rare is the willingness to endure the life of the writer." ― Kurt Vonnegut</item>
+        <item>"I speak to the Black experience, but I am always talking about the human condition - about what we can endure, dream, fail at and survive." ― Maya Angelou</item>
+        <item>"I don't go back and look at my early work, because the last time I did, many years ago, it left me cringing. If one publishes, then one is creating a public record of Learning to Write." ― Lorrie Moore</item>
+        <item>"In displaying the psychology of your characters, minute particulars are essential. God save us from vague generalizations!" ― Anton Chekhov</item>
+        <item>"Anyone who says writing is easy isn't doing it right." ― Amy Joy</item>
+        <item>"Aha! Today I shall become an author! And I will auth and auth and auth and make a squillion dollars, whoopee!" ― Brian Jacques</item>
+        <item>"You can't judge a book by it's cover but you can sure sell a bunch of books if you have a good one." ― Jayce O'Neal</item>
+        <item>"It's often a matter of sitting in front of the computer and worrying. It's what writing comes down to - worrying that things aren't going to work out." ― Khaled Hosseini</item>
+        <item>"If you're silent for a long time, people just arrive in your mind." ― Alice Walker</item>
+        <item>"If you have not done things worthy of being written about, at least write things worthy of being read." ― Giacomo Casanova</item>
+        <item>"Writer's block is just a symptom of feeling like you have nothing to say, combined with the rather weird idea that you should feel the need to say something. Why? If you have something to say, then say it. If not, enjoy the silence while it lasts. The noise will return soon enough." ― Hugh MacLeod</item>
+        <item>"Just tell the truth, and they'll accuse you of writing black humor." ― Charles Willeford</item>
+        <item>"As with all other aspects of the narrative art, you will improve with practice, but practice will never make you perfect. Why should it? What fun would that be?" ― Stephen King</item>
+        <item>"If I could sum it up in 50 words, I wouldn't have needed to write a whole novel about it." ― Patrick Rothfuss</item>
+        <item>"I am a writer perhaps because I am not a talker." ― Gwendolyn Brook</item>
+        <item>"This is no book. Whoever touches this touches a man." ― Ezra Pound</item>
+        <item>"Everyone in the South has no time for reading because they are all too busy writing." ― William Faulkner</item>
+        <item>"When you write about what you dream, you become a writer. When you dream about what you write, you become haunted by a curse." ― A. Saleh</item>
     </string-array>
 
 
