--- a/app/src/main/res/layout/activity_add_location.xml
+++ b/app/src/main/res/layout/activity_add_location.xml
@@ -1,84 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/add_location"
+    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:fillViewport="true"
+    android:layout_height="match_parent"
     tools:context="tahastudio.storybuilder.ShowStory">
 
-    <RelativeLayout
-        android:padding="20dp"
-        android:background="@color/white"
+    <ScrollView
+        android:fillViewport="true"
         android:orientation="vertical"
+        android:paddingBottom="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/activity_add_location_top"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
+        <RelativeLayout
+            android:padding="20dp"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/add_location_instructions"
+            <LinearLayout
+                android:id="@+id/activity_add_location_top"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/add_location_instructions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@drawable/ic_location"
+                    android:text="@string/location_instructions"/>
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/sb_location_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_location"
-                android:text="@string/location_instructions"/>
-        </LinearLayout>
+                android:hint="@string/location_name"
+                android:layout_below="@+id/activity_add_location_top"/>
 
-        <EditText
-            android:id="@+id/sb_location_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/location_name"
-            android:layout_below="@+id/activity_add_location_top"/>
+            <EditText
+                android:id="@+id/sb_location_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/location_location"
+                android:layout_below="@+id/sb_location_name"/>
 
-        <EditText
-            android:id="@+id/sb_location_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/location_location"
-            android:layout_below="@+id/sb_location_name"/>
+            <EditText
+                android:id="@+id/sb_location_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/location_desc"
+                android:layout_below="@+id/sb_location_location"/>
 
-        <EditText
-            android:id="@+id/sb_location_desc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/location_desc"
-            android:layout_below="@+id/sb_location_location"/>
+            <EditText
+                android:id="@+id/sb_location_importance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/location_importance"
+                android:layout_below="@+id/sb_location_desc"/>
 
-        <EditText
-            android:id="@+id/sb_location_importance"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/location_importance"
-            android:layout_below="@+id/sb_location_desc"/>
+            <EditText
+                android:id="@+id/sb_location_events"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/location_events"
+                android:layout_below="@+id/sb_location_importance"/>
 
-        <EditText
-            android:id="@+id/sb_location_events"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/location_events"
-            android:layout_below="@+id/sb_location_importance"/>
+            <EditText
+                android:id="@+id/sb_location_notes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/location_notes"
+                android:layout_below="@+id/sb_location_events"/>
+        </RelativeLayout>
+    </ScrollView>
 
-        <EditText
-            android:id="@+id/sb_location_notes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/location_notes"
-            android:layout_below="@+id/sb_location_events"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="end|bottom"
-            android:background="@color/white"
-            android:layout_alignParentBottom="true">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/white"
+        android:gravity="end|bottom"
+        android:layout_alignParentBottom="true">
 
             <Button
                 android:id="@+id/location_cancel"
@@ -92,8 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="?android:attr/borderlessButtonStyle"
-                android:text="@string/OK" />
-
+                android:text="@string/OK"/>
         </LinearLayout>
-    </RelativeLayout>
-</ScrollView>
+
+</RelativeLayout>
